feat: more building tags and living standard fixed for individual machines

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -24,6 +24,8 @@ l_english:
 	building_tec_branch_tier_2_tag: "§HTier 2§!"
 	building_tec_branch_tier_3_tag: "§HTier 3§!"
 
+	building_tec_space_tag: "\n"
+
 	building_tec_building_tier_1_tag: "§HTier 1§!"
 	building_tec_building_tier_2_tag: "§HTier 2§!"
 	building_tec_building_tier_3_tag: "§HTier 3§!"
@@ -48,6 +50,15 @@ l_english:
 	building_tec_leader_building_official_tag: "§E$building_tec_leader_building_tag$ ($tec_loc_leader_official$)§!"
 	building_tec_leader_building_scientist_tag: "§E$building_tec_leader_building_tag$ ($tec_loc_leader_scientist$)§!"
 	building_tec_leader_building_commander_tag: "§E$building_tec_leader_building_tag$ ($tec_loc_leader_commander$)§!"
+	building_tec_research_building_tag: "['concept_tec_research_building']"
+	building_tec_unity_building_tag: "['concept_tec_unity_building']"
+	building_tec_temple_building_tag: "['concept_tec_temple_building']"
+	building_tec_amenity_building_tag: "['concept_tec_amenity_building']"
+	building_tec_healthcare_building_tag: "['concept_tec_healthcare_building']"
+	building_tec_fortress_building_tag: "['concept_tec_fortress_building']"
+	building_tec_naval_building_tag: "['concept_tec_naval_building']"
+	building_tec_trade_building_tag: "['concept_tec_trade_building']"
+	building_tec_silo_building_tag: "['concept_tec_silo_building']"
  # /
 
  # Utilities
