--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -260,8 +260,64 @@
 	concept_tec_leader_building_icon: "£leader£ Leader Building"
 	concept_tec_leader_buildings: "Leader Buildings"
 	concept_tec_leader_buildings_icon: "£leader£ Leader Buildings"
-	concept_tec_leader_building_desc: "Leader Building are §Y£building£ Buildings§! that increase §Y$MOD_COUNTRY_LEADER_CAP_ADD$§! Jobs and provides £pop_cat_ruler£ Ruler Jobs (or equivalent for Gestalts).\n\n$concept_tec_leader_building$ ($tec_loc_leader_scientist$):\n$t$- ['building:building_institute']\n$t$- ['building:building_supercomputer']\n$t$- ['building:building_tec_biohive_supercomputer']\n$concept_tec_leader_building$ ($tec_loc_leader_official$):\n$t$- ['building:building_autocurating_vault']\n$t$- ['building:building_citadel_of_faith']\n$t$- ['building:building_corporate_vault']\n$t$- ['building:building_tec_hive_unity_vault']\n$t$- ['building:building_tec_cyberhive_unity_vault']\n$t$- ['building:building_tec_biohive_unity_vault']\n$t$- ['building:building_alpha_hub']\n$concept_tec_leader_building$ ($tec_loc_leader_commander$):\n$t$- ['building:building_military_academy']\n$t$- ['building:building_tec_gestalt_military_academy']\n$t$- ['building:building_tec_biohive_military_academy']"
+	concept_tec_leader_building_desc: "Leader Buildings are §Y£building£ Buildings§! that increase §Y$MOD_COUNTRY_LEADER_CAP_ADD$§! Jobs and provides £pop_cat_ruler£ Ruler Jobs (or equivalent for Gestalts).\n\n$concept_tec_leader_building$ ($tec_loc_leader_scientist$):\n$t$- ['building:building_institute']\n$t$- ['building:building_supercomputer']\n$t$- ['building:building_tec_biohive_supercomputer']\n$concept_tec_leader_building$ ($tec_loc_leader_official$):\n$t$- ['building:building_autocurating_vault']\n$t$- ['building:building_citadel_of_faith']\n$t$- ['building:building_corporate_vault']\n$t$- ['building:building_tec_hive_unity_vault']\n$t$- ['building:building_tec_cyberhive_unity_vault']\n$t$- ['building:building_tec_biohive_unity_vault']\n$t$- ['building:building_alpha_hub']\n$concept_tec_leader_building$ ($tec_loc_leader_commander$):\n$t$- ['building:building_military_academy']\n$t$- ['building:building_tec_gestalt_military_academy']\n$t$- ['building:building_tec_biohive_military_academy']"
+	
+	concept_tec_unity_building: "Unity Building"
+	concept_tec_unity_building_icon: "£unity£ Unity Building"
+	concept_tec_unity_buildings: "Unity Buildings"
+	concept_tec_unity_buildings_icon: "£unity£ Unity Buildings"
+	concept_tec_unity_building_desc: "Unity Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_unity$§! Jobs such as ['concept_tec_specialist_job_bureaucrat_plural_icon'], ['concept_tec_specialist_job_coordinator_plural_icon'] or ['concept_tec_specialist_job_tec_resonance_drone_plural_icon'].\n\n$concept_tec_unity_building$ ($job_bureaucrat_with_icon$):\n$t$- ['building:building_bureaucratic_1']\n$t$- ['building:building_tec_aiauth_1']\n$concept_tec_unity_building$ (£job_tec_resonance_drone£ $job_tec_resonance_drone$):\n$t$- ['building:building_hive_node']\n$t$- ['building:building_tec_cyberhive_node']\n$t$- ['building:building_tec_biohive_node']\n$concept_tec_unity_building$ (£job_evaluator£ $job_evaluator$):\n$t$- ['building:building_uplink_node']\n$t$- ['building:building_organic_sanctuary']"
 
+	concept_tec_temple_building: "Temple Building"
+	concept_tec_temple_building_icon: "£job_priest£ Temple Building"
+	concept_tec_temple_buildings: "Temple Buildings"
+	concept_tec_temple_buildings_icon: "£job_priest£ Temple Buildings"
+	concept_tec_temple_building_desc: "Temple Buildings are §Y£building£ Buildings§! that give ['concept_tec_specialist_job_priest_icon'] Jobs.\n\n$concept_tec_temple_building$:\n$t$- ['building:building_temple']\n$t$- ['building:building_sacrificial_temple_1']\n$t$- ['building:building_tec_mecha_temple_1']"
+
+
+	concept_tec_research_building: "Research Building"
+	concept_tec_research_building_icon: "£amenities£ Research Building"
+	concept_tec_research_buildings: "Research Buildings"
+	concept_tec_research_buildings_icon: "£amenities£ Research Buildings"
+	concept_tec_research_building_desc: "Research Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_research$§! Jobs such as ['concept_tec_specialist_job_researcher_plural_icon'], ['concept_tec_specialist_job_alculator_plural_icon'] or ['concept_tec_specialist_job_tec_brain_drone_plural_icon'].\n\n$concept_tec_research_building$:\n$t$- ['building:building_research_lab_1']\n$t$- ['building:building_tec_biohive_research_lab_1']"
+
+
+	concept_tec_amenity_building: "Amenity Building"
+	concept_tec_amenity_building_icon: "£amenities£ Amenity Building"
+	concept_tec_amenity_buildings: "Amenity Buildings"
+	concept_tec_amenity_buildings_icon: "£amenities£ Amenity Buildings"
+	concept_tec_amenity_building_desc: "Amenity Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_amenities$§! Jobs such as ['concept_tec_specialist_job_entertainer_plural_icon'] or ['concept_tec_specialist_job_tec_spareparts_drone_plural_icon'].\n\n$concept_tec_amenity_building$:\n$t$- ['building:building_holo_theatres']\n$t$- ['building:building_tec_gestalt_parts_1']"
+
+
+	concept_tec_healthcare_building: "Healthcare Building"
+	concept_tec_healthcare_building_icon: "£job_healthcare£ Healthcare Building"
+	concept_tec_healthcare_buildings: "Healthcare Buildings"
+	concept_tec_healthcare_buildings_icon: "£job_healthcare£ Healthcare Buildings"
+	concept_tec_healthcare_building_desc: "Healthcare Buildings are §Y£building£ Buildings§! that give ['concept_tec_specialist_job_healthcare_icon'] Jobs.\n\n$concept_tec_healthcare_building$:\n$t$- ['building:building_clinic']\n$t$- ['building:building_tec_cybernetic_hospital_1']"
+	
+	concept_tec_fortress_building: "Fortress Building"
+	concept_tec_fortress_building_icon: "£job_soldier£ Fortress Building"
+	concept_tec_fortress_buildings: "Fortress Buildings"
+	concept_tec_fortress_buildings_icon: "£job_soldier£ Fortress Buildings"
+	concept_tec_fortress_building_desc: "Fortress Buildings are §Y£building£ Buildings§! that give ['concept_tec_worker_job_soldier_icon'] or ['concept_tec_worker_job_warrior_drone_icon'] Jobs.\n\n$concept_tec_fortress_building$:\n$t$- ['building:building_stronghold']\n$t$- ['building:building_tec_dread_stronghold']\n$t$- ['building:building_tec_biohive_stronghold']"
+
+	concept_tec_naval_building: "Naval Building"
+	concept_tec_naval_building_icon: "£job_tec_naval_operator£ Naval Building"
+	concept_tec_naval_buildings: "Naval Buildings"
+	concept_tec_naval_buildings_icon: "£job_tec_naval_operator£ Naval Buildings"
+	concept_tec_naval_building_desc: "Naval Buildings are §Y£building£ Buildings§! that give ['concept_tec_specialist_job_tec_naval_operator_icon'] or ['concept_tec_specialist_job_tec_naval_operator_drone_icon'] Jobs.\n\n$concept_tec_naval_building$:\n$t$- ['building:building_stronghold']\n$t$- ['building:building_tec_dread_stronghold']\n$t$- ['building:building_tec_biohive_stronghold']"
+
+	concept_tec_trade_building: "Trade Building"
+	concept_tec_trade_building_icon: "£trade_value£ Trade Building"
+	concept_tec_trade_buildings: "Trade Buildings"
+	concept_tec_trade_buildings_icon: "£trade_value£ Trade Buildings"
+	concept_tec_trade_building_desc: "Trade Buildings are §Y£building£ Buildings§! that give ['concept_tec_worker_job_clerk_icon'], ['concept_tec_specialist_job_trader_icon'] or ['concept_tec_specialist_job_tec_trade_drone_icon'] Jobs.\n\n$concept_tec_trade_building$ (Regular):\n$t$- ['building:building_commercial_zone']\n$t$- ['building:building_tec_commercial_flagship']\n$t$- ['building:building_galactic_stock_exchange']\n$concept_tec_trade_building$ (Trade Machines):\n$t$- ['building:building_tec_trade_machine_1']\n$t$- ['building:building_tec_trade_machine_stonks']"
+
+	concept_tec_silo_building: "Silo Building"
+	concept_tec_silo_building_icon: "£mod_country_resource_max_add£ Silo Building"
+	concept_tec_silo_buildings: "Silo Buildings"
+	concept_tec_silo_buildings_icon: "£mod_country_resource_max_add£ Silo Buildings"
+	concept_tec_silo_building_desc: "Silo Buildings are §Y£building£ Buildings§! that give §Y£mod_country_resource_max_add£ $MOD_COUNTRY_RESOURCE_MAX_ADD$§!.\n\n$concept_tec_silo_building$:\n$t$- ['building:building_resource_silo']\n$t$- ['building:building_tec_biohive_resource_silo_1']"
 
 	#concept_tec_leader_civic: "Leader Civic"
 	#concept_tec_leader_civics: "Leader Civics"
@@ -1092,6 +1148,21 @@
 	concept_tec_specialist_job_cyberdome_duelist_plural: "$job_cyberdome_duelist_plural$"
 	concept_tec_specialist_job_cyberdome_duelist_plural_icon: "£job_cyberdome_duelist£ $job_cyberdome_duelist_plural$"
 	concept_tec_specialist_job_cyberdome_duelist_desc: "§L$job_cyberdome_duelist_desc$§!\n\n$job_cyberdome_duelist_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_cyberdome_duelist_alias']\n\n$tec_loc_happiness$: §G+2%§!\n$tec_loc_amenities$: §G+10§!\n$tec_loc_c_produces$: §Y£unity£ 2§!\n$tec_loc_c_upkeep$: §Y£alloys£ 1§!"
+
+	concept_tec_specialist_job_tec_spareparts_drone: "$job_tec_spareparts_drone$"
+	concept_tec_specialist_job_tec_spareparts_drone_alias: "$job_tec_spareparts_drone$"
+	concept_tec_specialist_job_tec_spareparts_drone_icon: "£job_maintenance_drone£ $job_tec_spareparts_drone$"
+	concept_tec_specialist_job_tec_spareparts_drone_plural: "$job_tec_spareparts_drone_plural$"
+	concept_tec_specialist_job_tec_spareparts_drone_plural_icon: "£job_maintenance_drone£ $job_tec_spareparts_drone_plural$"
+	concept_tec_specialist_job_tec_spareparts_drone_desc: "§L$job_tec_spareparts_drone_desc$§!\n\n$job_tec_spareparts_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_maintenancedrones_alias']\n\n$tec_loc_amenities$: §G+10§!\nIf Arcology, ['concept_tec_perfect_planet', Perfect], Machine, Hive or Capital Planet:\n$t$$mod_planet_jobs_complex_drone_produces_mult$: §G+2%§!\nIf NOT Arcology, ['concept_tec_perfect_planet', Perfect], Machine, Hive or Capital Planet:\n$t$$tec_loc_habitability$: §G+5%§!\n$tec_loc_c_produces$: §Y£unity£ 1§!\n$tec_loc_c_upkeep$: §Y£alloys£ 2§!"
+
+	concept_tec_specialist_job_healthcare: "$job_healthcare$"
+	concept_tec_specialist_job_healthcare_alias: "$job_healthcare$"
+	concept_tec_specialist_job_healthcare_icon: "£job_healthcare£ $job_healthcare$"
+	concept_tec_specialist_job_healthcare_plural: "$job_healthcare_plural$"
+	concept_tec_specialist_job_healthcare_plural_icon: "£job_healthcare£ $job_healthcare_plural$"
+	concept_tec_specialist_job_healthcare_desc: "§L$job_healthcare_desc$§!\n\n$job_healthcare_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_doctors_alias']\n\n$tec_loc_amenities$: §G+5§!\n$tec_loc_pop_growth$: §G+5§!\nIf Arcology, ['concept_tec_perfect_planet', Perfect]:\n$t$$tec_loc_planet_capacity$: §G+5%§!\nIf NOT Arcology, ['concept_tec_perfect_planet', Perfect]  Planet:\n$t$$tec_loc_habitability$: §G+5%§!\n$tec_loc_c_upkeep$: §Y£consumer_goods£ 1§!"
+
 
 	# /
  # Worker
@@ -2336,7 +2407,7 @@
 	concept_tec_eco_planet_soldiers_icon: "£job_soldier£ $planet_soldiers$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_soldiers_alias: "$planet_soldiers$"
 	concept_tec_eco_planet_soldiers_alias_icon: "£job_soldier£ $planet_soldiers$"
-	concept_tec_eco_planet_soldiers_desc: "This category covers most kinds of soldiers and swaps thereof, example jobs being ['concept_tec_worker_job_clerk_plural_icon'], ['concept_tec_specialist_job_tec_naval_operator_plural_icon'], ['concept_tec_worker_job_warrior_drone_plural_icon'], ['concept_tec_specialist_job_tec_naval_operator_drone_plural_icon'] and so on.\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_alias_icon']"
+	concept_tec_eco_planet_soldiers_desc: "This category covers most kinds of soldiers and swaps thereof, example jobs being ['concept_tec_worker_job_soldier_plural_icon'], ['concept_tec_specialist_job_tec_naval_operator_plural_icon'], ['concept_tec_worker_job_warrior_drone_plural_icon'], ['concept_tec_specialist_job_tec_naval_operator_drone_plural_icon'] and so on.\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_alias_icon']"
 
 	concept_tec_eco_planet_entertainers: "$planet_entertainers$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_entertainers_icon: "£job_entertainer£ $planet_entertainers$ $tec_loc_eco_category$"
