--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -2630,19 +2630,19 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
  # /
 
  # --------------- AP 2
-	ap_tec_psychic_t2:0 "Uncontained Psyche"
-	ap_tec_psychic_t2_desc:0 "TO DO."
+	ap_tec_psychic_elevation:0 "Uncontained Psyche"
+	ap_tec_psychic_elevation_desc:0 "TO DO."
 
 	# ---- Effects
-	ap_tec_psychic_t2_tooltip:0 "TO DO"
-	ap_tec_psychic_t2_tooltip_discovered:0 "TO DO"
+	ap_tec_psychic_elevation_tooltip:0 "TO DO"
+	ap_tec_psychic_elevation_tooltip_discovered:0 "TO DO"
 
 	# ---- Provides
 	tec_ap_unlock_x_tech:0 "\nProvides the £society£ §YX§! Technology as permanent research option."
 	tec_ap_unlock_psychic_t2_tradition:0 "\nUnlocks the §Y$tradition_tec_evolved_psychic_t1$§! tradition after completing the perk special project and researching the provided technologies.\n\n$tec_tradition_unlock_evolved_paths$"
 
 	# ---- Gates
-	ap_tec_psychic_t2_steps:0 "\n\n§HBase Ascension - Psychics§!"
+	ap_tec_psychic_elevation_steps:0 "\n\n§HBase Ascension - Psychics§!"
 
 	# ---- Requirements
 	tec_ap_require_X_tech:1 "$TRIGGER_FAIL$Requires the £society£ §YX§! technology."
