--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -369,6 +369,11 @@
  # /
 # /
 
+# ------------------------------------------------- Psychics T2 TODO ASCENSION
+	ap_tec_psychic_elevation:0 ""
+	ap_tec_psychic_elevation_desc:0 ""
+# /
+
 # ------------------------------------------------- Ethereal T1 TODO ASCENSION
 	ap_tec_ethereal_transcendence:0 "Transcendence"
 	ap_tec_ethereal_transcendence_desc:0 "$tec_loc_ap_type_mystical$ - $tec_loc_ap_type_transformative$\nShed from mortal and physical bounds, we are way more than we even dreamed of being, but reality bears a burden we must overcome, a barrier we must pass, a frontier we must cross, to be more..."
@@ -476,9 +481,9 @@
 # /
 
 # ------------------------------------------------- Bio T2 TODO ASCENSION
-	ap_tec_mutagenesis:0 "Mutagenesis"
-	ap_tec_genetic_perfection_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_advanced$\n§LPerfection is nothing without control of it. We must be able to mold our flesh like we meld the galaxy, and becoming something more, something different, something we can control and something that will make us whole.§!"
-	ap_tec_mutagenesis_tooltip:0 "Unlocks a §YSpecial project§! to become a fully biologically malleable species, becoming §HBio-Constructs§!, also having access to special advanced traits."
+	ap_tec_biogenic_mutation:0 "Biogenic Mutagenesis"
+	ap_tec_biogenic_mutation_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_advanced$\n§LPerfection is nothing without control of it. We must be able to mold our flesh like we meld the galaxy, and becoming something more, something different, something we can control and something that will make us whole.§!"
+	ap_tec_biogenic_mutation_tooltip:0 "Unlocks a §YSpecial project§! to become a fully biologically malleable species, becoming §HBio-Constructs§!, also having access to special advanced traits."
 
  # ---- Effect
 
@@ -510,7 +515,7 @@
 
 	ap_the_flesh_is_weak_cybernetics_tooltip:0 "$tec_loc_ap_chosen_path$ §ECybernetics§!\n§LOur path towards the enhancement of our species has led us to develop new implants that will make us stronger, faster, better.§!\n\n$tec_loc_ap_u_feature$ §HCyber-Upgrade§!\nWe are enhancing our species with mandatory §YCybernetic Implants§!. ['concept_trait_tec_cybernetic_main_help_icon']\n\n$tec_loc_ap_u_feature$ §HAutonetic Prowess§!\nThe integration of our population §YNegates§! or §YSeverely mitigates§! any potential rogue AI uprising or infiltration.\n\n"
 	ap_the_flesh_is_weak_cybernetics_cyborg_tooltip:0 "TODO ASCENSION"
-	ap_the_flesh_is_weak_cybernetics_hive_tooltip:0 "$tec_loc_ap_chosen_path$ §ECybernetics§!\n§LOur path towards the enhancement of our collective has led us to upgrade the design of our implants, making our drones stronger, faster, better.§!\n\n$tec_loc_ap_u_feature$ §HCyber-Upgrade§!\nWe are enhancing our drones with §YCybernetic Implants§! ['concept_trait_tec_cybernetic_main_help_icon'].\n\n$tec_loc_ap_u_feature$ §HAutonetic Prowess§!\nThe integration of our population §YNegates§! or §YSeverely mitigates§! any potential rogue AI uprising or infiltration.\n\n"
+	ap_the_flesh_is_weak_cybernetics_hive_tooltip:0 "$tec_loc_ap_chosen_path$ §ECybernetics§!\n§LOur path towards the enhancement of our collective has led us to upgrade ourselves with implants, making our drones stronger, faster, better.§!\n\n$tec_loc_ap_u_feature$ §HCyber-Upgrade§!\nWe are enhancing our drones with §YCybernetic Implants§! ['concept_trait_tec_cybernetic_main_help_icon'].\n\n$tec_loc_ap_u_feature$ §HAutonetic Prowess§!\nThe integration of our population §YNegates§! or §YSeverely mitigates§! any potential rogue AI uprising or infiltration.\n\n"
 	ap_the_flesh_is_weak_cybernetics_machine_tooltip:0 "$tec_loc_ap_chosen_path$ §ECybernetics§!\n§LOur path towards the enhancement of our collective has led us to upgrade the design of our implants, making our drones stronger, faster, better.§!\n\n$tec_loc_ap_u_feature$ §HCyber-Upgrade§!\nWe are augmenting the technology used in our §YCybernetic Implants§! ['concept_trait_tec_cybernetic_main_help_icon'].\n\n$tec_loc_ap_u_feature$ §HEncrypted Integration§!\nThe further integration of our population §YNegates§! or §YSeverely mitigates§! any potential AI invasive intrusion or infiltration.\n\n"
 	ap_the_flesh_is_weak_cybernetics_tradition:0 "$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_cybernetics$§!\n- Unlocks the §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
 
@@ -562,6 +567,14 @@
  # /
 # /
 
+
+# ------------------------------------------------- Bioware T2 TODO ASCENSION
+ # Base
+	ap_tec_bioware_combination:0 "Bioware Combination"
+	ap_tec_bioware_combination_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_advanced$\n§LTODO ASCENSION.§!"
+# /
+
+
 # SYNTHETIC PATH
 # ------------------------------------------------------------
 # Synthetic Evolution - Auto-Singularity
@@ -573,8 +586,9 @@
 	ap_synthetic_evolution_machine_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_transformative$\nIt is time to expand the capacities of our species, to drive evolution by our own design, our own code.\nNew platforms and neural patterns to update, enhance and improve our drones, units and systems, will be tools to mold our future at our will."
 
 	ap_synthetic_evolution_base_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technosynthetics_neutral_t1$§!\n- The §Y$situation_tec_ascension_technosynthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, the creation of new bodies and platforms to upload our consciousness to. ['concept_tec_branching_paths_help_icon']\n\n"
+	ap_synthetic_evolution_base_hive_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technosynthetics_neutral_t1$§!\n- The §Y$situation_tec_ascension_technosynthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, a way to use that proficiency towards the betterment of our collective. ['concept_tec_branching_paths_help_icon']\n\n"
 	ap_synthetic_evolution_base_machine_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technosynthetics_neutral_t1_machine$§!\n- The §Y$situation_tec_ascension_technosynthetics_neutral_t1_machine$§! situation will drive our advancements in synthetic development forward, further unlocking our potential. ['concept_tec_branching_paths_help_icon']\n\n"
-	ap_synthetic_evolution_base_robot_tooltip:0 "TODO ASCENSION"
+	ap_synthetic_evolution_base_robot_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technosynthetics_neutral_t1$§!\n- The §Y$situation_tec_ascension_technosynthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, further unlocking our potential. ['concept_tec_branching_paths_help_icon']\n\n"
 	tec_ap_unlock_tech_synthetic_workers:0 "$tec_loc_ap_u_technology$ §H$tech_synthetic_workers$§!\n- Provides the £engineering£ §Y$tech_synthetic_workers$§! Technology as permanent research option.\n\n"
 	tec_ap_unlock_tech_synthetic_leaders:0 "$tec_loc_ap_u_technology$ §H$tech_synthetic_leaders$§!\n- Provides the £engineering£ §Y$tech_synthetic_leaders$§! Technology.\n\n"
 	tec_ap_unlock_tech_robomodding_m:0 "$tec_loc_ap_u_technology$ §H$tech_robomodding_m$§!\n- Provides the £engineering£ §Y$tech_robomodding_m$§! Technology.\n\n"
@@ -596,9 +610,53 @@
 	ap_synthetic_evolution_digital_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_transformative$\nA new way to transfer data between real world and computerized environments has revolutionized our perspective. Our future lies in the digital real, tailored to our own design."
 	ap_synthetic_evolution_digital_tooltip:0 "$tec_loc_ap_chosen_path$ §BDigitalization§!\nWe are now able to upload our neural data into §Y£building£ Network Datacenters§!, using that data and capacity to improve the control and production of our empire.\n\n$tec_loc_ap_u_feature$ §HTODO ASCENSION§!\nTODO ASCENSION.\n\n"
 	ap_synthetic_evolution_digital_machine_tooltip:0 "$tec_loc_ap_chosen_path$ §BDigitalization§!\nWe are now able to migrate our platforms into non physical information stored in §Y£building£ Network Datacenters§!, using that data and capacity to improve the control and production of our collective.\n\n$tec_loc_ap_u_feature$ §HTODO ASCENSION§!\nTODO ASCENSION.\n\n"
-	ap_synthetic_evolution_digital_tradition:0 "$tec_loc_ap_u_tradition$ §HTODO ASCENSION§!\nUnlocks the §YTODO ASCENSION§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+
+	ap_synthetic_evolution_digital_tradition:0 "$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ TODO ASCENSION§!\nUnlocks the §Y$tec_loc_unity_icon$ TODO ASCENSION§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
  # /
 # /
+
+# ------------------------------------------------- Synth T1 MACHINE
+ # Base
+	ap_synthetic_age:0 "Synthetic Age"
+	ap_synthetic_age_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_transformative$\nThe age of organics has come and gone, the future of the galaxy belongs to the machines. This is the dawn of a synthetic age."
+	ap_synthetic_age_base_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technosynthetics_neutral_t1_machine$§!\n- The §Y$situation_tec_ascension_technosynthetics_neutral_t1_machine$§! situation will drive our advancements in synthetic development forward, further unlocking our potential."
+
+	ap_synthetic_age_tradition:0 "$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ Synthetic Traditions§!\nUnlocks a §Y$tec_loc_unity_icon$ Synthetic§! tradition based on the decisions during the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+ # /
+ # Mechanical
+	ap_synthetic_age_mechanical:0 "Artificial Evolution"
+	ap_synthetic_age_mechanical_desc:0 "$ap_synthetic_evolution_mechanical_machine_desc$"
+	ap_synthetic_age_mechanical_tooltip:0 "$ap_synthetic_evolution_mechanical_machine_tooltip$"
+	ap_synthetic_age_mechanical_tradition:0 "$ap_synthetic_evolution_mechanical_tradition$"
+ # /
+ # Digital
+	ap_synthetic_age_digital:0 "Digital Evolution"
+	ap_synthetic_age_digital_desc:0 "$ap_synthetic_evolution_digital_desc$"
+	ap_synthetic_age_digital_tooltip:0 "$ap_synthetic_evolution_digital_machine_tooltip$"
+	ap_synthetic_age_digital_tradition:0 "$ap_synthetic_evolution_digital_tradition$"
+ # /
+ # Modularity
+	ap_synthetic_age_modularity:0 "Synthetic Modularity"
+	ap_synthetic_age_modularity_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_transformative$\nBy using the resources at our reach we will truly design new modules that will greatly improve our platforms. The future lies in adaptability."
+	ap_synthetic_age_modularity_tooltip:0 "$todo_ascension$"
+	ap_synthetic_age_modularity_tradition:0 "$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_modularity$§!\nUnlocks the §Y$tec_loc_unity_icon$ $tradition_modularity$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$."
+ # /
+ # Nanites
+	ap_synthetic_age_nanotech:0 "Nanotech Amalgamation"
+	ap_synthetic_age_nanotech_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_transformative$\nBillions upon billions of ourselves will compose each platform, billions upon billions of nanobots recreating anything at our reach. Miniaturization is the future."
+	ap_synthetic_age_nanotech_tooltip:0 "$todo_ascension$"
+	ap_synthetic_age_nanotech_tradition:0 "$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_nanotech$§!\nUnlocks the §Y$tec_loc_unity_icon$ $tradition_nanotech$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n"
+ # /
+ # Virtuality
+
+ # Modularity
+	ap_synthetic_age_virtuality:0 "Synthetic Virtuality"
+	ap_synthetic_age_virtuality_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_transformative$\nPhysical forms are inefficient, it is time we consecrate our efforts towards designing totally virtual environments, in order to thrive exponentially. Boundaries are no more."
+	ap_synthetic_age_virtuality_tooltip:0 "$todo_ascension$"
+	ap_synthetic_age_virtuality_tradition:0 "$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_virtuality$§!\nUnlocks the §Y$tec_loc_unity_icon$ $tradition_virtuality$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$."
+ # /
+ # /
+ # /
 
 # ------------------------------------------------- Synth T2 TODO ASCENSION
 	ap_tec_synthetic_singularity:0 "Auto-Singularity"
@@ -788,16 +846,7 @@
 
 # MACHINES
 # ------------------------------------------------------------
-# --------------- T1
-	ap_synthetic_age:0 "Synthetic Age"
-	ap_synthetic_age_desc:0 "The age of organics has come and gone, the future of the galaxy belongs to the machines. This is the dawn of a synthetic age."
 
- # ---- Effects
-	tec_ap_synthetic_age_tooltip:0 "We will prepare the §Y$situation_tec_machine_path_t1$§! situation for unlocking our full §YSynthetic§! potential.\n"
-	tec_ap_synthetic_age_stopped:0 "\n§Y£trigger_tec_warning£ The Synthetic Age situation is not able to progress without the $tech_robomodding_m$ technology researched.§!"
-
- # ---- Provides
-	tec_ap_provides_tech_robomodding_m:0 "\n\nProvides the §Y$tech_robomodding_m$§! Technology as permanent research option."
 
 
  # ---- Requires
