ascension path t2 threading 1

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -358,11 +358,11 @@
 	ap_tec_psionic_ascendance_tooltip_discovered:0 "$tec_loc_ap_chosen_path$ §MAscendance§!\n§LIn communion with the shroud, we are now able to traverse through that new realm and even inhabit and reshape it.§!\n\n$tec_loc_ap_u_feature$ §HRitual of Ascension§!\n- Unlocks a §Y$tec_loc_planetary_decision$§! that ensure a safe path for some of our psionic population into another realms above material reality, creating, as byproduct, ways to §YEnormously boost§ the remaining population on that planet."
 
 	ap_tec_psionic_ascendance_unlock_leader_traits:0 "\n\n$tec_loc_ap_u_feature$ §HAbsolute Minds§!\n- Psionic leaders will gain §YSpecial traits§! after reaching the level §Y6§! and §Y10§!.\nThe gained trait will vary based on the leader type, specialization and active function."
-	ap_tec_psionic_ascendance_unlock_deluxe_shroud:0 "\n\n$tec_loc_ap_u_feature$ §HShrouded Knowledge§!\n- Unlocks an option for better §MShroud§! exploration, making expeditions safer and more rewarding in exchange of higher $tec_loc_zro_icon$ investment."
+	ap_tec_psionic_ascendance_unlock_deluxe_shroud:0 "\n\n$tec_loc_ap_u_feature$ §HShrouded Knowledge§!\n- Unlocks an option for better §MShroud§! exploration, making expeditions safer and more rewarding in exchange of higher §Y$tec_loc_zro_icon$ investment§!."
  # /
 
  # ---- Requires
-	ap_tec_psionic_ascendance_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the £unity£ §Y$tec_loc_unity_icon$ $tradition_psionics$§! tradition tree."
+	ap_tec_psionic_ascendance_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the £unity£ §Y$tec_loc_unity_icon$ $tradition_psionics$§! tradition tree, and a §YPosterior Event§!."
 
  # ---- OLD
 	tec_ap_unlock_ascendance_tradition:0 "\n§R£trigger_tec_warning_red£ EFFECT NOT READY§! Unlocks the §Y$tec_loc_unity_icon$ $tradition_tec_evolved_ascendance$§! tradition after completing the §Y$situation_tec_psionic_path_t2$§! tradition."
@@ -382,7 +382,7 @@
 	ap_tec_ethereal_transcendence_tooltip:0 "..."
 
  # ---- Requires
-	ap_tec_ethereal_transcendence_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the £unity£ §Ytradition_tec_evolved_ethereal§! tradition tree."
+	ap_tec_ethereal_transcendence_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the £unity£ §Ytradition_tec_evolved_ethereal§! tradition tree, and a §YPosterior Event§!."
 
  # ---- OLD
 	tec_ap_unlock_transcendence_tradition:0 "\n§R£trigger_tec_warning_red£ EFFECT NOT READY§! Unlocks the §Y$tec_loc_unity_icon$ $tradition_tec_evolved_transcendence$§! tradition after breaking our dimensional constraints."
@@ -459,7 +459,7 @@
 	ap_tec_genetic_perfection_recombinator_growth:0 "\n\n$tec_loc_ap_u_feature$ §HPopulation Boosters§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ increase §Y$tec_loc_organic_assembly$§!."
 
  # ---- Requires
-	ap_tec_genetic_perfection_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_genetics$§! tradition tree."
+	ap_tec_genetic_perfection_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_genetics$§! tradition tree, and a §YPosterior Event§!."
 
  # ---- OLD
 	tec_ap_unlock_genetic_perfection_tradition:0 "\n§R£trigger_tec_warning_red£ EFFECT NOT READY§! Unlocks the §Y$tradition_genetics$§! tradition tree after finishing §Y$situation_tec_gene_path_t2$§!."
@@ -560,7 +560,7 @@
 	ap_tec_cybernetic_revolution_unlock_ripperdoc:0 "\n- Unlocks §YTODO ASCENSION§!, which TODO ASCENSION"
  # /
  # ---- Requires
-	ap_tec_cybernetic_revolution_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! tradition tree."
+	ap_tec_cybernetic_revolution_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! tradition tree, and a §YPosterior Event§!."
  # /
  # ---- OLD
 	tec_ap_unlock_cybernetic_revolution_tradition:0 "\n§R£trigger_tec_warning_red£ EFFECT NOT READY§! Unlocks the §Y$tec_loc_unity_icon$ $tradition_tec_evolved_cybernetics$§! tradition after completing the §YCybernetic Revolution§! situation."
@@ -668,7 +668,7 @@
 
 
  # ---- Requires
-	ap_tec_synthetic_singularity_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_synthetics$§! tradition tree."
+	ap_tec_synthetic_singularity_requirements_path:1 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_synthetics$§! tradition tree, and a §YPosterior Event§!."
 
 	# Here the subspec - they work as 3 different aps in one so...
 	ap_tec_synthetic_singularity_definitive:0 "Definitive Singularity"
@@ -743,7 +743,7 @@
 	ap_tec_replicant_provide_cybernetic_bonuses:0 "\n\n$tec_loc_ap_u_feature$ §HCybernetic Compatibility§!\n- Provide some of the bonuses of the §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! tradition tree, such as £job_roboticist£ $mod_ROBOT_species_trait_points_add$ applying to Replicant species, or several §YCybernetic§! traits."
 
  # ---- Requires
-	ap_tec_replicant_require_cybernetic_or_genetic_tradition:0 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_genetics$§! or §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! tradition tree."
+	ap_tec_replicant_require_cybernetic_or_genetic_tradition:0 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_genetics$§!, §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! or §Y$tec_loc_unity_icon$ $tradition_tec_bioware$§! tradition tree, and a §YPosterior Event§!."
 
  # ---- OLD
 	tec_ap_unlock_synthesis_tradition:0 "\n§R£trigger_tec_warning_red£ EFFECT NOT READY§! Unlocks the §Y$tec_loc_unity_icon$ $tradition_tec_evolved_replicant$§! tradition tree after completing the £stability£ §Y$situation_tec_replicant_path_t2$§! situation."
@@ -776,7 +776,7 @@
 	ap_tec_biopsionic_provide_psionic_bonuses:0 "\n\n$tec_loc_ap_u_feature$ §HPsionics Harmonization§!\n- Provide some of the bonuses of the §Y$tec_loc_unity_icon$ $tradition_psionics$§! tradition tree, such as enabling contact with the §MShroud§!, or the ability to create §Y£building£ $building_psi_corps$§!"
 
  # ---- Requires
-	ap_tec_biopsionic_require_genetic_or_psionic_tradition:0 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_genetics$§! or §Y$tec_loc_unity_icon$ $tradition_psionics$§! tradition tree."
+	ap_tec_biopsionic_require_genetic_or_psionic_tradition:0 "$TRIGGER_FAIL$Requires having completed the §Y$tec_loc_unity_icon$ $tradition_genetics$§! or §Y$tec_loc_unity_icon$ $tradition_psionics$§! tradition tree, and a §YPosterior Event§!."
 
  # ---- OLD
 	tec_ap_unlock_biopsionic_tradition:0 "\n§R£trigger_tec_warning_red£ EFFECT NOT READY§! Unlocks the §Y$tec_loc_unity_icon$ $tradition_tec_evolved_biopsionic$§! tradition tree after finishing £stability£ §Y$situation_tec_biopsionic_path_t2$§! situation."
@@ -802,7 +802,7 @@
 	ap_tec_cyberpsionic_provide_psionic_bonuses:0 "\n\n$tec_loc_ap_u_feature$ §HPsionic Infusion§!\n- Provide some of the bonuses of the §Y$tec_loc_unity_icon$ $tradition_psionics$§! tradition tree, such as enabling contact with the §MShroud§!, or the ability to create §Y£building£ $building_psi_corps$§!"
 
  # ---- Requires
-	ap_tec_cyberpsionic_require_cybernetic_or_psionic_tradition:0 "$TRIGGER_FAIL$Requires having completed the £unity£ §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! or §Y$tec_loc_unity_icon$ $tradition_psionics$§! tradition tree."
+	ap_tec_cyberpsionic_require_cybernetic_or_psionic_tradition:0 "$TRIGGER_FAIL$Requires having completed the £unity£ §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! or §Y$tec_loc_unity_icon$ $tradition_psionics$§! tradition tree, and a §YPosterior Event§!."
 
 	tec_cyberpsionic_requirements:0 "$TRIGGER_FAIL$Requires having completed §Y$ap_the_flesh_is_weak$§! ascension special project or having a §BCybernetic§! origin, and either §Y$ap_mind_over_matter$§! perk or a §MPsionic§! origin."
 
