ascension path t2 threading 1 + researcher nerf in prep of research booster adjustments

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -811,6 +811,18 @@
  # /
 # /
 
+# Biological + Psychic
+# ------------------------------------------------- Infusions
+	ap_tec_biopsychic:0 "Existential Equilibrium"
+	ap_tec_biopsychic_desc:0 "TODO ASCENSION"
+# /
+
+# Cybernetics + Psychic
+# ------------------------------------------------- Infusions
+	ap_tec_cyberpsychic:0 "Biotic Mastery"
+	ap_tec_cyberpsychic_desc:0 "TODO ASCENSION"
+# /
+
 # Machine hybrid paths
 # ------------------------------------------------- Biomechanical - replicant like
 	ap_tec_replicant_machine:0 "Biomechanical Evolution"
